Update memory settings/defaults for Java 8 (#1641)
* Update memory settings/defaults for Java 8
* Revise text to indicate tile cache, rather than file cache is used by JAI